--- a/src/pages/signup_page/signup_page.css
+++ b/src/pages/signup_page/signup_page.css
@@ -39,6 +39,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 3px;
     background-color: white;
+    color: #000;
 }
 
 .container #signupForm button{
