--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.airlines{
+/* .airlines{
    padding: 10px;
 }
 .paths li{
@@ -11,7 +11,45 @@
     align-items: flex-end;
 }
 .navbar{
-    display: flex;
-    padding: 5px;
-    justify-content: space-between;
-   }
+  margin: 0%;
+  position: absolute;
+   display: flex;
+   padding: 5px;
+   justify-content: space-between;
+   background-color: orange;
+   width: 100vw;
+   height: 30px;
+} */
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.airlines {
+  padding: 10px;
+}
+
+.paths li {
+  display: inline;
+  padding: 10px;
+}
+
+.paths {
+  text-align: right;
+  align-items: flex-end;
+}
+
+.navbar {
+  position: fixed; /* Change to fixed */
+  top: 0; /* Ensure it is positioned at the top */
+  left: 0; /* Ensure it spans from the left edge */
+  right: 0; /* Ensure it spans to the right edge */
+  margin: 0;
+  display: flex;
+  padding: 5px;
+  justify-content: space-between;
+  background-color: orange;
+  z-index: 1000; /* Ensure it appears above other elements */
+}
