--- a/src/pages/Searchflights/searchflights.css
+++ b/src/pages/Searchflights/searchflights.css
@@ -91,7 +91,7 @@ body {
 
 .box {
     background-color: white;
-    width: 50%;
+    width: 60%;
     height: 50%;
     border: 1px solid #ccc;
     padding: 20px;
@@ -100,6 +100,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 5%;
 }
 
 .one-way-title {
@@ -162,4 +163,11 @@ select, input[type="date"] {
     .search-btn {
         font-size: 14px;
     }
+}
+html, body ,#root{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    font-family: Arial, sans-serif;
 }
