--- a/src/pages/flightsdisplay/flightdisplay.css
+++ b/src/pages/flightsdisplay/flightdisplay.css
@@ -1,82 +1,80 @@
-   .container {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    height: 75px;
-    width: 100vw;
-  }
-  .col1 {
-    width: 10%;
-    height: 50px;
-    margin-left: 5px;
-    margin-top: 25px;
-  }
-  .col2 {
-    width: 10%;
-    height: 75px;
-    margin-right: 5%;
-  }
-  .col3 {
-    width: 35%;
-    margin-right: 5%;
-    height: 75px;
-  }
-  .col4 {
-    width: 10%;
-    height: 75px;
-    margin-right: 10%;
-  }
-  .col5 {
-    width: 20%;
-    height: 75px;
-  }
-  .col6{
-    width: 25%;
-    margin-top: 2%;
-    margin-left: 5%;
-    height: 75px;
-  }
-  .btn{
-    height: 30px;
-    width: 80px;
-    background-color: orange;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bolder;
-  }
-  .card {
-    border-radius: 25px;
-    height: 120px;
-    padding: 10px;
-  }
-  .location {
-    font-size: 20px;
-  }
-  .city {
-    font-size: 15px;
-  }
-  .time {
-    text-align: center;
-    font-size: 15px;
-    text-decoration-color: grey;
-  }
-  .price {
-    margin-top: 35px;
-  }
-  .flightnum {
-    font-size: 15px;
-  }
-  .img{
-    width: 32px;
-    margin-right: 10px;
-  } 
-  .air{
-    margin-top: 4%;
-  }
- .col0{
-  width: 500px;
- }
-   
+#root{
+  margin-top: 250px;
+}
+.con{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  height: 75px;
+  padding : 20px;
+  background-color: white;
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  box-shadow: black;
+}
+.col1 {
+  width: 10%;
+  height: 50px;
+  margin-left: 5px;
+  margin-top: 25px;
+}
+.col2 {
+  width: 20%;
+  height: 75px;
+}
+.col3 {
+  width: 20%;
+  margin-right: 5%;
+  height: 75px;
+}
+.col4 {
+  width: 10%;
+  height: 75px;
+  margin-right: 10%;
+}
+.col5 {
+  width: 20%;
+  height: 75px;
+}
 
-    
+.card {
+  border-radius: 25px;
+  position: relative;
+  height: 125px;
+  background-color: white;
+}
+.location {
+  font-size: 20px;
+}
+.city {
+  font-size: 15px;
+}
+.time {
+  text-align: center;
+  font-size: 15px;
+  width: 100px;
+  text-decoration-color: grey;
+}
+.price {
+  margin-top: 35px;
+}
+.flightnum {
+  font-size: 15px;
+}
+.img {
+}
+.col6 {
+  margin-top: 3%;
+  margin-left: 2%;
+}
+.btn {
+  align-items: center;
+  border: none;
+  height: 30px;
+  background-color: orange;
+  width: 70px;
+  color: white;
+  font-weight: bolder;
+  border-radius: 5px;
+}
