--- a/src/pages/seatselection/seatselection.css
+++ b/src/pages/seatselection/seatselection.css
@@ -23,7 +23,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  background-color: lightgrey;
+  background-color: whitesmoke;
   border-radius: 5px;
   padding: 10px;
   justify-content: space-between;
