--- a/src/pages/checkin/checkin.css
+++ b/src/pages/checkin/checkin.css
@@ -1,5 +1,5 @@
 .content-checkin {
-    width: 90%;
+    width: 50%;
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
@@ -9,11 +9,19 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
-  .h1-checkin {
+  .h1 {
     margin-top :90px;
     margin-bottom: 20px;
-    color: #f14c14;
   }
+  .content-checkin h1{
+    color:white;
+    font-size: 50px;
+  }
+   
+  .content-checkin p{
+    color:white;
+  }
+
   
   .description-checkin {
     margin-top :50px;
@@ -48,6 +56,8 @@
   .label-checkin {
     display: block;
     margin-bottom: 5px;
+    font-weight:bold;
+    color:white;
   }
   
   .input-checkin[type="text"] {
@@ -58,17 +68,18 @@
   }
   
   .button-checkin {
-    background-color: #f14c14;
-    color: white;
+    background-color: #f8f5f2;
+    color: rgb(234, 104, 34);
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 4px;
     margin-top:20px;
+    font-weight:bold;
   }
   
   .button-checkin:hover {
-    background-color: #ffcc00;
+    background-color: #b7b2b2;
   }
   
   .checkin-result {
