--- a/src/pages/checkin_confirmation/confirmation.css
+++ b/src/pages/checkin_confirmation/confirmation.css
@@ -1,7 +1,7 @@
 .body-confirm {
     font-family: 'Roboto', sans-serif;
     background-color: #f7f8fc;
-    color: #333;
+    color: #db4d0b;
     margin-top:45px;
     margin-left:190px;
     padding: 0;
@@ -27,7 +27,7 @@
   
   .header-confirm h1 {
     margin: 0;
-    color: #e8e0da;
+    color: #f0610e;
   }
   
   section.confirmation {
@@ -68,17 +68,20 @@
   }
   
   .but {
-    background-color: #e95f0a;
+    background-color: #d62d0b;
     color: #fff;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 4px;
     margin: 10px;
-    font-size: 16px;
+    font-size: 18px;
   }
   
   .but :hover {
-    background-color: #003366;
+    background-color: #13579a;
+  }
+  .flight-info{
+    box-shadow:  0 0 10px rgba(128, 128, 124, 0.836);
   }
   
