--- a/src/pages/Itinerary/itinerary.css
+++ b/src/pages/Itinerary/itinerary.css
@@ -103,7 +103,7 @@
   }
   
   .continue {
-    background-color: #d62d0b;
+    background-color: #ea6a1a;
     color: white;
     padding: 10px 20px;
     border: none;
