--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -19,8 +19,8 @@
   
   .profile-card {
     background: linear-gradient(135deg, #ff7e5f, #feb47b);
-    width: 100%;
-    border-radius: 0 0 50px 50px;
+    width: 95%;
+    border-radius: 50px 50px 50px 50px;
     color: white;
     text-align: center;
     padding: 20px;
@@ -31,11 +31,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left:30px;
   }
   
-  .header-profile {
-    position: relative;
-  }
+ 
   
   
   .profile-pic-container {
@@ -109,8 +108,8 @@
   
   .profile-option {
     position: absolute;
-    top: 70px;
-    left: 20px;
+    top: 110px;
+    left: 50px;
     padding: 10px 20px;
     background-color: white;
     border-radius: 20px;
@@ -126,6 +125,15 @@
     font-size: 20px;
     font-weight: bold;
   }
-
-  
+  .back-btn{
+    position: absolute;
+    top: 70px;
+    left: 60px;
+    padding: 10px 20px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color:#ff7e5f;
+    font-weight:bold;
+  }
   
