--- a/src/pages/seatselection/seatselection.css
+++ b/src/pages/seatselection/seatselection.css
@@ -1,6 +1,5 @@
  body {
   font-family: Arial, sans-serif;
-  background-color: #f8f9fa;
   color: #343a40;
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@
   text-align: center;
 }
 
-h1 {
+.seats-title {
   margin: 20px 0;
   font-size: 24px;
   color: orange;
