--- a/src/pages/Notification/notification.css
+++ b/src/pages/Notification/notification.css
@@ -4,7 +4,9 @@
     align-items: center;
     padding: 20px;
     background-color: #f5f5f5;
-    height: 100vh;
+    width: 80%;
+    margin-left: 10%;
+    height: 75%;
   }
   
   .back-button-notif {
@@ -33,7 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 80%;
     max-width: 800px;
     background-color: white;
     border-radius: 8px;
