--- a/src/pages/checkin_details/checkin_details.css
+++ b/src/pages/checkin_details/checkin_details.css
@@ -34,7 +34,7 @@
   }
   
   .user-login-d p {
-    color: #e1d7d7;
+    color: orange;
     font-weight:bold;
     margin: 0;
   }
@@ -49,8 +49,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ec740c;
-    color: #ffffff;
+    background-color: white;
+    color: black;
     padding: 20px;
     border-radius: 5px;
   }
@@ -60,10 +60,10 @@
   .passenger-info-d {
     display: flex;
     flex-direction: column;
-    color:white;
+    color:black;
   }
   .flight-date-info{
-    color:white;
+    color:black;
     font-size:18px;
   }
   
@@ -97,7 +97,7 @@
     max-width: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    color:#ec740c;
+    color:black;
   }
   
   .check-in-form button {
@@ -114,14 +114,14 @@
   }
   
   .return-link-det a {
-    color: #ac821a;
+    color: black;
     text-decoration: none;
   }
   .info-label {
     color:rgb(205, 84, 18);
   }
   .info-label-d {
-    color:rgb(240, 236, 233);
+    color:black;
     font-weight:bold;
   }
   
