--- a/src/pages/currentbookings/bookings.css
+++ b/src/pages/currentbookings/bookings.css
@@ -5,6 +5,9 @@
     padding: 20px;
     background-color: #f5f5f5;
     height: 100vh;
+    width: 80%;
+    margin-left: 10%;
+    height: 75%;
   }
   
   .back-button-book {
