--- a/src/pages/profile_edit/profile_edit.css
+++ b/src/pages/profile_edit/profile_edit.css
@@ -11,13 +11,15 @@
     padding: 20px;
     background-color: #f5f5f5;
     height: 75vh;
+    width: 70%;
+    margin-left: 15%;
+    border-radius: 20px;
   }
   
   .edit-header {
     display: flex;
     align-items: center;
     width:65%;
-    background-color: #ff7e5f;
     color: white;
     padding: 10px 20px;
     position: relative;
@@ -27,7 +29,7 @@
   .back-btn-edit {
     background: none;
     border: none;
-    color: white;
+    color: orange;
     font-size: 24px;
     cursor: pointer;
     margin-right: 20px;
@@ -36,10 +38,10 @@
   
   .edit-h2 {
     margin-left: 10px;
-    color:#ff7e5f;
+    color:white;
     position: absolute;
     padding: 10px 20px;
-    background-color: white;
+    background-color: orange;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
