--- a/src/pages/Notification/notification.css
+++ b/src/pages/Notification/notification.css
@@ -13,7 +13,7 @@
     align-self: flex-start;
     padding: 10px 20px;
     margin-bottom: 20px;
-    background-color: #ccc;
+    background-color: #ff7e5f;
     color: #333;
     border: none;
     border-radius: 8px;
