--- a/src/pages/currentbookings/bookings.css
+++ b/src/pages/currentbookings/bookings.css
@@ -73,6 +73,8 @@
   .bookings-content {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     justify-content: center;
     /* align-items: center; */
     height:500px;
