--- a/src/pages/currentbookings/bookings.css
+++ b/src/pages/currentbookings/bookings.css
@@ -75,8 +75,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: center;
-    /* align-items: center; */
+    /* justify-content: center; */
+    align-items: center;
     height:500px;
   }
   
