--- a/src/pages/Itinerary/itinerary.css
+++ b/src/pages/Itinerary/itinerary.css
@@ -58,32 +58,15 @@
     color: #ea740c;
   }
   
-  .itinerary-details {
-    margin-bottom: 20px;
-  }
+
   
   .detail {
     font-size: 18px;
     margin: 10px 0;
   }
   
-  .formGroup-Itinerary {
-    margin-bottom: 20px;
-  }
-  
-  .label-Itinerary {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: 500;
-  }
-  
-  .select-Itinerary {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
+
+
   
   .buttons-itinerary {
     display: flex;
@@ -92,7 +75,7 @@
   }
   
   
-  .select-seat {
+  .selectSeat {
     background-color: #d62d0b;
     color: #fff;
     padding: 10px 20px;
