--- a/src/pages/signup_page/signup_page.css
+++ b/src/pages/signup_page/signup_page.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
 }
 
-.container {
+.container-signup {
     background-color:white;
     padding: 20px;
     border-radius: 5px;
