--- a/src/pages/selecttraveller/selecttraveller.css
+++ b/src/pages/selecttraveller/selecttraveller.css
@@ -93,7 +93,7 @@
     margin-right: 5px;
 }
 
-.contain {
+.traveller-container {
     background-color: #f8f9fa;
     align-items: center;
     width: 60%;
